[gd_scene load_steps=11 format=3 uid="uid://d21l4ym332shf"]

[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_2bclh"]
[ext_resource type="PackedScene" uid="uid://dh65rc30hfv2f" path="res://assets/scenes/heart_container.tscn" id="2_52qht"]
[ext_resource type="Texture2D" uid="uid://bvnwyjaieeny6" path="res://assets/sprites/BossEnemy.png" id="2_ejo28"]
[ext_resource type="PackedScene" uid="uid://djd50o8gfwkd7" path="res://assets/scenes/health.tscn" id="3_2gois"]
[ext_resource type="PackedScene" uid="uid://csneqj2ujdwhm" path="res://assets/scenes/health_pickup.tscn" id="3_y58eu"]
[ext_resource type="PackedScene" uid="uid://cierws6fcdu0c" path="res://assets/scenes/weapon.tscn" id="4_pgkji"]
[ext_resource type="Script" path="res://assets/scripts/enemy_fighterAI.gd" id="5_6qe3f"]
[ext_resource type="Script" path="res://assets/scripts/bulletmanager.gd" id="6_n5c04"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sm8x5"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2qne8"]
radius = 100.0

[node name="Fighter Enemy" type="CharacterBody2D"]
script = ExtResource("1_2bclh")
item_scenes = Array[PackedScene]([ExtResource("2_52qht"), ExtResource("3_y58eu")])

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ejo28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sm8x5")

[node name="Health" parent="." instance=ExtResource("3_2gois")]

[node name="Weapon" parent="." instance=ExtResource("4_pgkji")]
position = Vector2(33, 0)

[node name="AI" type="Node2D" parent="."]
script = ExtResource("5_6qe3f")

[node name="PlayerDetectionZone" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource("CircleShape2D_2qne8")

[node name="PatrolTimer" type="Timer" parent="AI"]
wait_time = 3.0
one_shot = true

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource("6_n5c04")

[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_patrol_timer_timeout"]
